<package>
 <name>s8_utils</name>
  <version>0.1.0</version>
  <description>
    Utility package containing small utilities 
  </description>
  <license>BSD</license>

  <author email="lwiener@kth.se">Lucas Wiener</author>
  <maintainer email="lwiener@kth.se">Lucas Wiener</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>s8_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>s8_msgs</run_depend>

</package>
